MyDevOrg/src/objects/Test_Itemss__c.object
<CustomObject>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Do_item__c</fullName>
        <label>Related Do item</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Item_Name__c</fullName>
        <label>Test Item Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tester_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Itemss</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Test Item{00000}</displayFormat>
        <label>Test Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Itemss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>